# CMakeCooking

./: .gitignore  .gitlab-ci.yml  APPLY.md  CHANGES.md  Cooking.cmake  Makefile  README.md  cooking.opam  cooking.sh  cooking.sh.in  generate-cooking.sh
ci/: Dockerfile
lib/interaction/: abs_fpath.ml  abs_fpath.mli  cooking_interaction.ml  cooking_interaction.mli  project.ml  project.mli  runner.ml  runner.mli
lib/model/: cooking_model.ml  cooking_model.mli  directed_graph.ml  directed_graph.mli  recipe.ml  recipe.mli
lib/testing/: accounting.ml  accounting.mli  cooking_testing.ml  cooking_testing.mli  test.ml  test.mli
pantry/apple/: CMakeLists.txt  cooking_recipe.cmake
pantry/banana/: CMakeLists.txt  cooking_recipe.cmake
pantry/carrot/: CMakeLists.txt
pantry/feature/custom_recipe/consumer/: CMakeLists.txt  cooking.sh  cooking_recipe.cmake
pantry/feature/custom_recipe/project/: CMakeLists.txt
pantry/feature/custom_recipe/project/recipe/: dev.cmake
pantry/issue/ep_source_subdir/dep/cmake/: CMakeLists.txt
pantry/issue/ep_source_subdir/root/: CMakeLists.txt
pantry/issue/ep_source_subdir/root/recipe/: dev.cmake
test/integration/: cooking_test_integration.ml
test/model/: cooking_test_model.ml
