opam-version: "2.0"
maintainer: "Jesse Haber-Kucharsky <jesse@haberkucharsky.com>"
authors: "Jesse Haber-Kucharsky <jesse@haberkucharsky.com>"
homepage: "https://github/hakuch/CMakeCooking"
bug-reports: "https://github.com/hakuch/CMakeCooking/issues"
license: "Apache 2.0"
dev-repo: "git+https://github.com/hakuch/CMakeCooking"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "-p" name "-j" jobs "@doc"] {with-doc}
]
depends: [
  "ocaml" {>= "4.06.0"}

  "bos" {>= "0.2.0"}
  "cmdliner" {>= "1.0.3"}
  "fmt" {>= "0.8.5"}
  "fpath" {>= "0.7.2"}
  "logs" {>= "0.6.2"}
  "ppx_deriving" {>= "4.2.1"}

  "dune" {build & >= "1.6.0"}

  "ppx_inline_test" {with-test & >= "0.10.1"}

  "odoc" {with-doc & >= "1.3.0"}
]
